--- a/app.yaml
+++ b/app.yaml
@@ -36,6 +36,10 @@ handlers:       # static then dynamic
 - url: /crons/set_announcement
   script: main.app
 
+- url: /tasks/review_speakers_for_sessions
+  script: main.app
+  login: admin
+
 - url: /_ah/spi/.*
   script: conference.api
   secure: always
